-- Decoupling AudioManager from Engine. Cleaning up gradle files. Updating assets.