@@ -7,7 +7,6 @@ buildscript {
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
     }
     dependencies {
-        classpath 'org.mini2Dx:parcl:1.4.0'
         classpath 'org.mini2Dx:butler:1.1.3'
         classpath 'com.github.jengelman.gradle.plugins:shadow:5.0.0'
     }
@@ -42,48 +41,23 @@ project(":core") {
     dependencies {
         implementation "org.mini2Dx:mini2Dx-core:$mini2DxVersion"
         implementation "org.mini2Dx:mini2Dx-tiled:$mini2DxVersion"
+        implementation "org.lwjgl.lwjgl:lwjgl:2.9.3"
         
         implementation "org.codehaus.groovy:groovy:3.0.0-beta-1"
-        implementation "org.lwjgl.lwjgl:lwjgl:2.9.3"
         implementation "org.apache.commons:commons-io:1.3.2"
-        implementation "net.compartmental.code:minim:2.2.2"
     }
 }
 
 project(":desktop") {
     apply plugin: "java"
     apply plugin: "application"
-    apply plugin: "org.mini2Dx.parcl"
     apply plugin: "org.mini2Dx.butler"
-
 
     dependencies {
         implementation project(":core")
         implementation "org.mini2Dx:mini2Dx-desktop:$mini2DxVersion"
         
         implementation "org.apache.commons:commons-io:1.3.2"
-    }
-    parcl {
-        exe {
-            vmArgs = ["-Xmx1g", "-XX:+CMSClassUnloadingEnabled", "-Djava.security.manager", "-Djava.security.policy=./Sys/mysecurity.policy"]
-            exeName = "Leikr"
-        }
-        app {
-            vmArgs = ["-Xmx1g", "-XX:+CMSClassUnloadingEnabled", "-Djava.security.manager", "-Djava.security.policy=./Sys/mysecurity.policy"]
-            appName = "Leikr"
-            icon = "icon.icns"
-            applicationCategory = "public.app-category.adventure-games"
-            displayName = "Leikr"
-            identifier = "Leikr"
-            copyright = "Copyright 2018 Your Company Name"
-            zipName = "Leikr.zip"
-        }
-        linux {
-            vmArgs = ["-Xmx1g", "-XX:+CMSClassUnloadingEnabled", "-Djava.security.manager", "-Djava.security.policy=./Sys/mysecurity.policy"]
-            binName = "Leikr"
-            withJre("/usr/lib/jvm/java-1.8.0-openjdk/")
-            zipName = "Leikr.zip"
-        }
     }
     butler {
         user = "Torbuntu"
